@@ -1,3 +1,8 @@
+2004-12-09  Sushma Rai <rsushma@novell.com>
+
+	* storage/main.c (main): Calling camel_init with the
+	camel_cert.db file path.  Fixes #66932
+
 2004-12-06  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* configure.in : Updated the version number to 2.0.3
